@@ -1,0 +1,30 @@
+/*
+ *  xdx - GTK+ DX-cluster client for amateur radio
+ *  Copyright (C) 2014 Nate Bargmann N0NB <n0nb@n0nb.us>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU Library General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+/*
+ *  cmd_opts.c - Parse command line options.
+ */
+
+
+#ifndef XDX_CMD_OPTS_H
+#define XDX_CMD_OPTS_H
+
+void parse_opts(int *argc, char ***argv);
+
+#endif /* XDX_CMD_OPTS_H */
